# RAG-OPS

./: .dockerignore  .env.example  .env.staging.example  .gitignore  AGENTIC_RETRIEVAL_ADOPTION_PLAN.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  RAG_OPS_DETAILED_EXPLANATION.md  README.md  README_TECHNICAL.md  REPO_OVERVIEW_SIMPLE.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 20260407_0001_initial_service_schema.py  20260407_0002_run_control_fields.py  20260407_0003_auth_security_foundation.py  20260407_0004_run_results_and_artifacts.py  20260407_0005_run_bindings_and_attempts.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: AppShell.tsx  MetricCard.tsx  Panel.tsx  ProgressBar.tsx  StatusPill.tsx
frontend/src/data/: demoDataset.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/pages/: CredentialsPage.tsx  DatasetsPage.tsx  OverviewPage.tsx  ReportsPage.tsx  RunsPage.tsx
monitoring/: alerts.yml  prometheus.yml
src/rag_ops/: __init__.py  cache.py  chunkers.py  cli.py  data_loading.py  embedders.py  experiment_store.py  metrics.py  metrics_registry.py  metrics_server.py  models.py  object_store.py  observability.py  redis_client.py  results_frame.py  retrievers.py  runner.py  settings.py  validation.py
src/rag_ops/api/: __init__.py  app.py  dependencies.py  middleware.py
src/rag_ops/db/: __init__.py  bootstrap.py  models.py  session.py
src/rag_ops/ui/: app.py  (+7 more)
tests/: conftest.py  test_api_platform.py  test_api_system.py  test_async_runs.py  test_auth_security.py  test_chunkers.py  test_data_loading.py  test_embedders.py  test_metrics.py  test_retrievers.py  test_runner.py  test_ui_api_client.py
(+29 files in other folders)
